k8/istio/user-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: /user/
      rewrite:
        uri: / # optional: remove "/user" before forwarding to the backend
      route:
        - destination:
            host: user-service
            port:
              number: 5001
